--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,7 @@
             }
           ],
         "prettier/prettier": "error",
+        "class-methods-use-this": "off"
     },
     "settings": {
         "import/resolver": {
