--- a/.eslintrc
+++ b/.eslintrc
@@ -31,7 +31,11 @@
             }
           ],
         "prettier/prettier": "error",
-        "class-methods-use-this": "off"
+        "class-methods-use-this": "off",
+        "@typescript-eslint/camelcase": "off",
+        "no-param-reassign": "off",
+        "camelcase": "off",
+        "no-unused-vars": ["error", { "argsIgnorePattern": "next" }]
     },
     "settings": {
         "import/resolver": {
