--- a/.eslintrc
+++ b/.eslintrc
@@ -35,7 +35,7 @@
         "@typescript-eslint/camelcase": "off",
         "no-param-reassign": "off",
         "camelcase": "off",
-        "no-unused-vars": ["error", { "argsIgnorePattern": "next" }]
+        "no-unused-vars": ["error", { "argsIgnorePattern": ["next", "_"] }]
     },
     "settings": {
         "import/resolver": {
